fixed modal issues that includes: overflow, scroll, modal max-height and scrollbars

--- a/src/app/sections/Preferences.module.scss
+++ b/src/app/sections/Preferences.module.scss
@@ -1,6 +1,6 @@
 .back {
   position: absolute;
-  left: 40px;
+  left: 20px;
   transform: translate(0, 50%);
 
   svg path {
@@ -9,6 +9,5 @@
 }
 
 .button__container {
-  padding-right: 10px;
   width: 100%;
 }
